# ecommerce-realtime-data-pipeline

./: .gitignore  ARCHITECTURE.md  CODE_STANDARDS.md  DAY7_COMPLETE_TUTORIAL.md  DAY7_QUICK_REFERENCE.md  DEPLOYMENT.md  DEPLOYMENT_READY.md  LICENSE  README.md  check_metrics.py  create_metrics_schema.sql  grafana_dashboard.json  memory_monitor.sh  optimize_8gb_system.sh  pyproject-simple.toml  pyproject.toml  requirements-dev.txt  requirements-spark.txt  requirements.txt  run_metrics_schema.py  run_streaming.sh  test_day2.py  test_setup.py
airflow/: create_admin_user.py  create_user.py  docker-compose.yml  docker-compose.yml.BACKUP  init-airflow-user.py  init-airflow.sh  set-admin-password.sh
airflow/dags/: create_admin_user.py  ecommerce_pipeline_dag.py
analytics/: advanced_queries.py
data_generator/: __init__.py  config.py.ORIGINAL  generators.py  kafka_producer.py  run_generator.py  schemas.py
data_quality/: validate_data.py
docker/: docker-compose.yml  docker-compose.yml.ORIGINAL
docker/init-scripts/: 01_init_db.sql
docs/: AIRFLOW_DAG_ANALYSIS.md  AIRFLOW_QUICK_FIX_GUIDE.md  DATA_QUALITY_IMPLEMENTATION.md  DATA_QUALITY_SUITES.md  DAY_1_GUIDE.md  GRAFANA_METRICS_FIX.md  PERFORMANCE_TUNING.md  UV_FIX.md  UV_SETUP_GUIDE.md  day_2.md
monitoring/: export_metrics.py  export_metrics_complete.py  setup_metrics_schema.py
streaming/: __init__.py  bronze_to_silver.py  gold_layer_guard.py  kafka_to_bronze.py  query_delta.py  silver_to_gold.py
streaming/utils/: delta_utils.py  spark_session.py  spark_session.py.ORIGINAL
